--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jest-sorted": "^1.0.15",
     "pg": "^8.13.3",
     "pg-format": "^1.0.4"
   },
