--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prepare": "husky install",
     "start": "node listen.js",
     "test-seed": "jest seed.test.js",
-    "seed-prod": "NODE_ENV=production npm run seed-dev"
+    "seed-prod": "NODE_ENV=production npm run seed-dev",
+    "start-prod": "NODE_ENV=production npm run start"
   },
   "repository": {
     "type": "git",
